Change color of ShopCategory-indexsort p

--- a/src/Pages/CSS/ShopCategory.css
+++ b/src/Pages/CSS/ShopCategory.css
@@ -11,6 +11,10 @@
   align-items: center;
 }
 
+.shopcategory-indexSort p {
+  color: #ffffff;
+}
+
 .shopcategory-sort_dark {
   font-family: inherit;
   text-align: center;
